test/cases/compile_errors/stage1/obj/C_pointer_to_anyopaque.zig
export fn a() void {
    var x: *anyopaque = undefined;
    var y: [*c]anyopaque = x;
    _ = y;
}

// error
// backend=stage1
// target=native
//
// tmp.zig:3:16: error: C pointers cannot point to opaque types
